use nginx-proxy to reverse proxy to any UPSTREAM_HOST and UPSTREAM_PORT

--- a/nginx.tmpl
+++ b/nginx.tmpl
@@ -6,7 +6,10 @@
 {{ define "upstream" }}
 	{{ if .Address }}
 		{{/* If we got the containers from swarm and this container's port is published to host, use host IP:PORT */}}
-		{{ if and .Container.Node.ID .Address.HostPort }}
+		{{ if and .Container.Env.UPSTREAM_HOST .Container.Env.UPSTREAM_PORT }}
+			# {{ .Container.Node.Name }}/{{ .Container.Name }}
+			server {{ .Container.Env.UPSTREAM_HOST }}:{{ .Container.Env.UPSTREAM_PORT }};
+		{{ else if and .Container.Node.ID .Address.HostPort }}
 			# {{ .Container.Node.Name }}/{{ .Container.Name }}
 			server {{ .Container.Node.Address.IP }}:{{ .Address.HostPort }};
 		{{/* If there is no swarm node or the port is not published on host, use container's IP:PORT */}}
