--- a/nginx.tmpl
+++ b/nginx.tmpl
@@ -3,7 +3,7 @@
 {{ $external_http_port := coalesce $.Env.HTTP_PORT "80" }}
 {{ $external_https_port := coalesce $.Env.HTTPS_PORT "443" }}
 
-{{ $nginx_listen_parameter := or ($.Env.NGINX_LISTEN_PARAMETER) "" }}
+{{ $listen_parameter := or ($.Env.NGINX_LISTEN_PARAMETER) "" }}
 
 {{ define "upstream" }}
 	{{ if .Address }}
@@ -110,7 +110,7 @@ map $scheme $proxy_x_forwarded_ssl {
 
 gzip_types text/plain text/css application/javascript application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
-log_format vhost '$host $remote_addr $proxy_protocol_addr - $remote_user [$time_local] '
+log_format vhost '$host $remote_addr - $remote_user [$time_local] '
                  '"$request" $status $body_bytes_sent '
                  '"$http_referer" "$http_user_agent"';
 
@@ -159,9 +159,13 @@ server {
 {{ if (and (exists "/etc/nginx/certs/default.crt") (exists "/etc/nginx/certs/default.key")) }}
 server {
 	server_name _; # This is just an invalid value which will never trigger on a real hostname.
-	listen {{ $external_https_port }} ssl http2 {{ $nginx_listen_parameter }};
+	listen {{ $external_https_port }} ssl http2 {{ $listen_parameter }};
 	{{ if $enable_ipv6 }}
 	listen [::]:{{ $external_https_port }} ssl http2;
+	{{ end }}
+	{{ if $listen_parameter }}
+	set_real_ip_from 172.0.0.0/8;
+	real_ip_header proxy_protocol;
 	{{ end }}
 	{{ $access_log }}
 	return 503;
@@ -274,9 +278,13 @@ server {
 
 server {
 	server_name {{ $host }};
-	listen {{ $external_https_port }} ssl http2 {{ $default_server }} {{ $nginx_listen_parameter }};
+	listen {{ $external_https_port }} ssl http2 {{ $default_server }} {{ $listen_parameter }};
 	{{ if $enable_ipv6 }}
-	listen [::]:{{ $external_https_port }} ssl http2 {{ $default_server }} {{ $nginx_listen_parameter }};
+	listen [::]:{{ $external_https_port }} ssl http2 {{ $default_server }} {{ $listen_parameter }};
+	{{ end }}
+	{{ if $listen_parameter }}
+	set_real_ip_from 172.0.0.0/8;
+	real_ip_header proxy_protocol;
 	{{ end }}
 	{{ $access_log }}
 
@@ -391,9 +399,13 @@ server {
 {{ if (and (not $is_https) (exists "/etc/nginx/certs/default.crt") (exists "/etc/nginx/certs/default.key")) }}
 server {
 	server_name {{ $host }};
-	listen {{ $external_https_port }} ssl http2 {{ $default_server }} {{ $nginx_listen_parameter }};
+	listen {{ $external_https_port }} ssl http2 {{ $default_server }} {{ $listen_parameter }};
 	{{ if $enable_ipv6 }}
-	listen [::]:{{ $external_https_port }} ssl http2 {{ $default_server }} {{ $nginx_listen_parameter }};
+	listen [::]:{{ $external_https_port }} ssl http2 {{ $default_server }} {{ $listen_parameter }};
+	{{ end }}
+	{{ if $listen_parameter }}
+	set_real_ip_from 172.0.0.0/8;
+	real_ip_header proxy_protocol;
 	{{ end }}
 	{{ $access_log }}
 	return 500;
