--- a/nginx.tmpl
+++ b/nginx.tmpl
@@ -3,7 +3,7 @@
 {{ $external_http_port := coalesce $.Env.HTTP_PORT "80" }}
 {{ $external_https_port := coalesce $.Env.HTTPS_PORT "443" }}
 
-{{ $listen_parameter := or ($.Env.NGINX_LISTEN_PARAMETER) "" }}
+{{ $listen_parameter := or ($.Container.Env.NGINX_LISTEN_PARAMETER) "" }}
 
 {{ define "upstream" }}
 	{{ if .Address }}
