--- a/nginx.tmpl
+++ b/nginx.tmpl
@@ -3,8 +3,6 @@
 {{ $external_http_port := coalesce $.Env.HTTP_PORT "80" }}
 {{ $external_https_port := coalesce $.Env.HTTPS_PORT "443" }}
 
-{{ $listen_parameter := or ($.Container.Env.NGINX_LISTEN_PARAMETER) "" }}
-
 {{ define "upstream" }}
 	{{ if .Address }}
 		{{/* If we got the containers from swarm and this container's port is published to host, use host IP:PORT */}}
@@ -159,13 +157,9 @@ server {
 {{ if (and (exists "/etc/nginx/certs/default.crt") (exists "/etc/nginx/certs/default.key")) }}
 server {
 	server_name _; # This is just an invalid value which will never trigger on a real hostname.
-	listen {{ $external_https_port }} ssl http2 {{ $listen_parameter }};
+	listen {{ $external_https_port }} ssl http2;
 	{{ if $enable_ipv6 }}
 	listen [::]:{{ $external_https_port }} ssl http2;
-	{{ end }}
-	{{ if $listen_parameter }}
-	set_real_ip_from 172.0.0.0/8;
-	real_ip_header proxy_protocol;
 	{{ end }}
 	{{ $access_log }}
 	return 503;
@@ -250,6 +244,8 @@ upstream {{ $upstream_name }} {
 
 {{ $is_https := (and (ne $https_method "nohttps") (ne $cert "") (exists (printf "/etc/nginx/certs/%s.crt" $cert)) (exists (printf "/etc/nginx/certs/%s.key" $cert))) }}
 
+{{ $listen_parameter := or (first (groupByKeys $containers "Env.NGINX_LISTEN_PARAMETER")) "" }}
+
 {{ if $is_https }}
 
 {{ if eq $https_method "redirect" }}
@@ -284,6 +280,7 @@ server {
 	{{ end }}
 	{{ if $listen_parameter }}
 	set_real_ip_from 172.0.0.0/8;
+	set_real_ip_from 127.0.0.1;
 	real_ip_header proxy_protocol;
 	{{ end }}
 	{{ $access_log }}
@@ -405,6 +402,7 @@ server {
 	{{ end }}
 	{{ if $listen_parameter }}
 	set_real_ip_from 172.0.0.0/8;
+	set_real_ip_from 127.0.0.1;
 	real_ip_header proxy_protocol;
 	{{ end }}
 	{{ $access_log }}
